style.css
html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  overflow: auto;
  background-color: rgb(30, 30, 30);
  font-family: Monospace, sans-serif;
  color: turquoise;
  text-align: center;
}

.topnav {
  overflow: hidden;
  display: flex;
  justify-content: right;
}

.nav-item {
  padding: 1% 2%;
  margin: 0%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
}

.topnav a:hover {
  color: turquoise;
}

.nav-img {
  position: absolute;
  top: 0px;
  left: 0px;
  padding: 0px 10px;
  width: 40px;
  height: auto;

}

#unicode {
  color: white;
}

